cse307/hw4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression
Rule 2     expression -> number
Rule 3     expression -> BOOLEAN
Rule 4     expression -> STRING
Rule 5     expression -> list
Rule 6     expression -> empty
Rule 7     expression -> expression LBRACKET number RBRACKET
Rule 8     expression -> LPAREN expression RPAREN
Rule 9     expression -> NOT expression
Rule 10    expression -> expression AND expression
Rule 11    expression -> expression OR expression
Rule 12    expression -> expression GT expression
Rule 13    expression -> expression GTE expression
Rule 14    expression -> expression LT expression
Rule 15    expression -> expression LTE expression
Rule 16    expression -> expression EQUAL expression
Rule 17    expression -> expression NEQUAL expression
Rule 18    expression -> expression ADD expression
Rule 19    expression -> expression MINUS expression
Rule 20    expression -> expression MULT expression
Rule 21    expression -> expression DIVIDE expression
Rule 22    expression -> expression FDIVIDE expression
Rule 23    expression -> expression POW expression
Rule 24    expression -> expression MOD expression
Rule 25    expression -> expression IN expression
Rule 26    expression -> MINUS expression
Rule 27    list -> LBRACKET RBRACKET
Rule 28    list -> LBRACKET innerlist RBRACKET
Rule 29    innerlist -> innerlist COMMA expression
Rule 30    innerlist -> expression
Rule 31    number -> INT
Rule 32    number -> REAL
Rule 33    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 18
AND                  : 10
BOOLEAN              : 3
COMMA                : 29
DIVIDE               : 21
EQUAL                : 16
FDIVIDE              : 22
GT                   : 12
GTE                  : 13
IN                   : 25
INT                  : 31
LBRACKET             : 7 27 28
LPAREN               : 8
LT                   : 14
LTE                  : 15
MINUS                : 19 26
MOD                  : 24
MULT                 : 20
NEQUAL               : 17
NOT                  : 9
OR                   : 11
POW                  : 23
RBRACKET             : 7 27 28
REAL                 : 32
RPAREN               : 8
STRING               : 4
error                : 

Nonterminals, with rules where they appear

empty                : 6
expression           : 1 7 8 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 29 30
innerlist            : 28 29
list                 : 5
number               : 2 7
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression
    (2) expression -> . number
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . empty
    (7) expression -> . expression LBRACKET number RBRACKET
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . NOT expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression GT expression
    (13) expression -> . expression GTE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LTE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NEQUAL expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression MULT expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression FDIVIDE expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression IN expression
    (26) expression -> . MINUS expression
    (31) number -> . INT
    (32) number -> . REAL
    (27) list -> . LBRACKET RBRACKET
    (28) list -> . LBRACKET innerlist RBRACKET
    (33) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    LPAREN          shift and go to state 9
    NOT             shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 12
    REAL            shift and go to state 13
    LBRACKET        shift and go to state 8
    AND             reduce using rule 33 (empty -> .)
    OR              reduce using rule 33 (empty -> .)
    GT              reduce using rule 33 (empty -> .)
    GTE             reduce using rule 33 (empty -> .)
    LT              reduce using rule 33 (empty -> .)
    LTE             reduce using rule 33 (empty -> .)
    EQUAL           reduce using rule 33 (empty -> .)
    NEQUAL          reduce using rule 33 (empty -> .)
    ADD             reduce using rule 33 (empty -> .)
    MULT            reduce using rule 33 (empty -> .)
    DIVIDE          reduce using rule 33 (empty -> .)
    FDIVIDE         reduce using rule 33 (empty -> .)
    POW             reduce using rule 33 (empty -> .)
    MOD             reduce using rule 33 (empty -> .)
    IN              reduce using rule 33 (empty -> .)
    $end            reduce using rule 33 (empty -> .)

  ! LBRACKET        [ reduce using rule 33 (empty -> .) ]
  ! MINUS           [ reduce using rule 33 (empty -> .) ]

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    number                         shift and go to state 3
    list                           shift and go to state 6
    empty                          shift and go to state 7

state 1

    (0) S' -> statement .



state 2

    (1) statement -> expression .
    (7) expression -> expression . LBRACKET number RBRACKET
    (10) expression -> expression . AND expression
    (11) expression -> expression . OR expression
    (12) expression -> expression . GT expression
    (13) expression -> expression . GTE expression
    (14) expression -> expression . LT expression
    (15) expression -> expression . LTE expression
    (16) expression -> expression . EQUAL expression
    (17) expression -> expression . NEQUAL expression
    (18) expression -> expression . ADD expression
    (19) expression -> expression . MINUS expression
    (20) expression -> expression . MULT expression
    (21) expression -> expression . DIVIDE expression
    (22) expression -> expression . FDIVIDE expression
    (23) expression -> expression . POW expression
    (24) expression -> expression . MOD expression
    (25) expression -> expression . IN expression

    $end            reduce using rule 1 (statement -> expression .)
    LBRACKET        shift and go to state 14
    AND             shift and go to state 15
    OR              shift and go to state 16
    GT              shift and go to state 17
    GTE             shift and go to state 18
    LT              shift and go to state 19
    LTE             shift and go to state 20
    EQUAL           shift and go to state 21
    NEQUAL          shift and go to state 22
    ADD             shift and go to state 23
    MINUS           shift and go to state 24
    MULT            shift and go to state 25
    DIVIDE          shift and go to state 26
    FDIVIDE         shift and go to state 27
    POW             shift and go to state 28
    MOD             shift and go to state 29
    IN              shift and go to state 30


state 3

    (2) expression -> number .

    LBRACKET        reduce using rule 2 (expression -> number .)
    AND             reduce using rule 2 (expression -> number .)
    OR              reduce using rule 2 (expression -> number .)
    GT              reduce using rule 2 (expression -> number .)
    GTE             reduce using rule 2 (expression -> number .)
    LT              reduce using rule 2 (expression -> number .)
    LTE             reduce using rule 2 (expression -> number .)
    EQUAL           reduce using rule 2 (expression -> number .)
    NEQUAL          reduce using rule 2 (expression -> number .)
    ADD             reduce using rule 2 (expression -> number .)
    MINUS           reduce using rule 2 (expression -> number .)
    MULT            reduce using rule 2 (expression -> number .)
    DIVIDE          reduce using rule 2 (expression -> number .)
    FDIVIDE         reduce using rule 2 (expression -> number .)
    POW             reduce using rule 2 (expression -> number .)
    MOD             reduce using rule 2 (expression -> number .)
    IN              reduce using rule 2 (expression -> number .)
    $end            reduce using rule 2 (expression -> number .)
    RBRACKET        reduce using rule 2 (expression -> number .)
    COMMA           reduce using rule 2 (expression -> number .)
    RPAREN          reduce using rule 2 (expression -> number .)


state 4

    (3) expression -> BOOLEAN .

    LBRACKET        reduce using rule 3 (expression -> BOOLEAN .)
    AND             reduce using rule 3 (expression -> BOOLEAN .)
    OR              reduce using rule 3 (expression -> BOOLEAN .)
    GT              reduce using rule 3 (expression -> BOOLEAN .)
    GTE             reduce using rule 3 (expression -> BOOLEAN .)
    LT              reduce using rule 3 (expression -> BOOLEAN .)
    LTE             reduce using rule 3 (expression -> BOOLEAN .)
    EQUAL           reduce using rule 3 (expression -> BOOLEAN .)
    NEQUAL          reduce using rule 3 (expression -> BOOLEAN .)
    ADD             reduce using rule 3 (expression -> BOOLEAN .)
    MINUS           reduce using rule 3 (expression -> BOOLEAN .)
    MULT            reduce using rule 3 (expression -> BOOLEAN .)
    DIVIDE          reduce using rule 3 (expression -> BOOLEAN .)
    FDIVIDE         reduce using rule 3 (expression -> BOOLEAN .)
    POW             reduce using rule 3 (expression -> BOOLEAN .)
    MOD             reduce using rule 3 (expression -> BOOLEAN .)
    IN              reduce using rule 3 (expression -> BOOLEAN .)
    $end            reduce using rule 3 (expression -> BOOLEAN .)
    RBRACKET        reduce using rule 3 (expression -> BOOLEAN .)
    COMMA           reduce using rule 3 (expression -> BOOLEAN .)
    RPAREN          reduce using rule 3 (expression -> BOOLEAN .)


state 5

    (4) expression -> STRING .

    LBRACKET        reduce using rule 4 (expression -> STRING .)
    AND             reduce using rule 4 (expression -> STRING .)
    OR              reduce using rule 4 (expression -> STRING .)
    GT              reduce using rule 4 (expression -> STRING .)
    GTE             reduce using rule 4 (expression -> STRING .)
    LT              reduce using rule 4 (expression -> STRING .)
    LTE             reduce using rule 4 (expression -> STRING .)
    EQUAL           reduce using rule 4 (expression -> STRING .)
    NEQUAL          reduce using rule 4 (expression -> STRING .)
    ADD             reduce using rule 4 (expression -> STRING .)
    MINUS           reduce using rule 4 (expression -> STRING .)
    MULT            reduce using rule 4 (expression -> STRING .)
    DIVIDE          reduce using rule 4 (expression -> STRING .)
    FDIVIDE         reduce using rule 4 (expression -> STRING .)
    POW             reduce using rule 4 (expression -> STRING .)
    MOD             reduce using rule 4 (expression -> STRING .)
    IN              reduce using rule 4 (expression -> STRING .)
    $end            reduce using rule 4 (expression -> STRING .)
    RBRACKET        reduce using rule 4 (expression -> STRING .)
    COMMA           reduce using rule 4 (expression -> STRING .)
    RPAREN          reduce using rule 4 (expression -> STRING .)


state 6

    (5) expression -> list .

    LBRACKET        reduce using rule 5 (expression -> list .)
    AND             reduce using rule 5 (expression -> list .)
    OR              reduce using rule 5 (expression -> list .)
    GT              reduce using rule 5 (expression -> list .)
    GTE             reduce using rule 5 (expression -> list .)
    LT              reduce using rule 5 (expression -> list .)
    LTE             reduce using rule 5 (expression -> list .)
    EQUAL           reduce using rule 5 (expression -> list .)
    NEQUAL          reduce using rule 5 (expression -> list .)
    ADD             reduce using rule 5 (expression -> list .)
    MINUS           reduce using rule 5 (expression -> list .)
    MULT            reduce using rule 5 (expression -> list .)
    DIVIDE          reduce using rule 5 (expression -> list .)
    FDIVIDE         reduce using rule 5 (expression -> list .)
    POW             reduce using rule 5 (expression -> list .)
    MOD             reduce using rule 5 (expression -> list .)
    IN              reduce using rule 5 (expression -> list .)
    $end            reduce using rule 5 (expression -> list .)
    RBRACKET        reduce using rule 5 (expression -> list .)
    COMMA           reduce using rule 5 (expression -> list .)
    RPAREN          reduce using rule 5 (expression -> list .)


state 7

    (6) expression -> empty .

    LBRACKET        reduce using rule 6 (expression -> empty .)
    AND             reduce using rule 6 (expression -> empty .)
    OR              reduce using rule 6 (expression -> empty .)
    GT              reduce using rule 6 (expression -> empty .)
    GTE             reduce using rule 6 (expression -> empty .)
    LT              reduce using rule 6 (expression -> empty .)
    LTE             reduce using rule 6 (expression -> empty .)
    EQUAL           reduce using rule 6 (expression -> empty .)
    NEQUAL          reduce using rule 6 (expression -> empty .)
    ADD             reduce using rule 6 (expression -> empty .)
    MINUS           reduce using rule 6 (expression -> empty .)
    MULT            reduce using rule 6 (expression -> empty .)
    DIVIDE          reduce using rule 6 (expression -> empty .)
    FDIVIDE         reduce using rule 6 (expression -> empty .)
    POW             reduce using rule 6 (expression -> empty .)
    MOD             reduce using rule 6 (expression -> empty .)
    IN              reduce using rule 6 (expression -> empty .)
    $end            reduce using rule 6 (expression -> empty .)
    RBRACKET        reduce using rule 6 (expression -> empty .)
    COMMA           reduce using rule 6 (expression -> empty .)
    RPAREN          reduce using rule 6 (expression -> empty .)


state 8

    (27) list -> LBRACKET . RBRACKET
    (28) list -> LBRACKET . innerlist RBRACKET
    (29) innerlist -> . innerlist COMMA expression
    (30) innerlist -> . expression
    (2) expression -> . number
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . empty
    (7) expression -> . expression LBRACKET number RBRACKET
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . NOT expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression GT expression
    (13) expression -> . expression GTE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LTE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NEQUAL expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression MULT expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression FDIVIDE expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression IN expression
    (26) expression -> . MINUS expression
    (31) number -> . INT
    (32) number -> . REAL
    (27) list -> . LBRACKET RBRACKET
    (28) list -> . LBRACKET innerlist RBRACKET
    (33) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for RBRACKET resolved as shift
    RBRACKET        shift and go to state 31
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    LPAREN          shift and go to state 9
    NOT             shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 12
    REAL            shift and go to state 13
    LBRACKET        shift and go to state 8
    AND             reduce using rule 33 (empty -> .)
    OR              reduce using rule 33 (empty -> .)
    GT              reduce using rule 33 (empty -> .)
    GTE             reduce using rule 33 (empty -> .)
    LT              reduce using rule 33 (empty -> .)
    LTE             reduce using rule 33 (empty -> .)
    EQUAL           reduce using rule 33 (empty -> .)
    NEQUAL          reduce using rule 33 (empty -> .)
    ADD             reduce using rule 33 (empty -> .)
    MULT            reduce using rule 33 (empty -> .)
    DIVIDE          reduce using rule 33 (empty -> .)
    FDIVIDE         reduce using rule 33 (empty -> .)
    POW             reduce using rule 33 (empty -> .)
    MOD             reduce using rule 33 (empty -> .)
    IN              reduce using rule 33 (empty -> .)
    COMMA           reduce using rule 33 (empty -> .)

  ! LBRACKET        [ reduce using rule 33 (empty -> .) ]
  ! MINUS           [ reduce using rule 33 (empty -> .) ]
  ! RBRACKET        [ reduce using rule 33 (empty -> .) ]

    innerlist                      shift and go to state 32
    expression                     shift and go to state 33
    number                         shift and go to state 3
    list                           shift and go to state 6
    empty                          shift and go to state 7

state 9

    (8) expression -> LPAREN . expression RPAREN
    (2) expression -> . number
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . empty
    (7) expression -> . expression LBRACKET number RBRACKET
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . NOT expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression GT expression
    (13) expression -> . expression GTE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LTE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NEQUAL expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression MULT expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression FDIVIDE expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression IN expression
    (26) expression -> . MINUS expression
    (31) number -> . INT
    (32) number -> . REAL
    (27) list -> . LBRACKET RBRACKET
    (28) list -> . LBRACKET innerlist RBRACKET
    (33) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    LPAREN          shift and go to state 9
    NOT             shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 12
    REAL            shift and go to state 13
    LBRACKET        shift and go to state 8
    RPAREN          reduce using rule 33 (empty -> .)
    AND             reduce using rule 33 (empty -> .)
    OR              reduce using rule 33 (empty -> .)
    GT              reduce using rule 33 (empty -> .)
    GTE             reduce using rule 33 (empty -> .)
    LT              reduce using rule 33 (empty -> .)
    LTE             reduce using rule 33 (empty -> .)
    EQUAL           reduce using rule 33 (empty -> .)
    NEQUAL          reduce using rule 33 (empty -> .)
    ADD             reduce using rule 33 (empty -> .)
    MULT            reduce using rule 33 (empty -> .)
    DIVIDE          reduce using rule 33 (empty -> .)
    FDIVIDE         reduce using rule 33 (empty -> .)
    POW             reduce using rule 33 (empty -> .)
    MOD             reduce using rule 33 (empty -> .)
    IN              reduce using rule 33 (empty -> .)

  ! LBRACKET        [ reduce using rule 33 (empty -> .) ]
  ! MINUS           [ reduce using rule 33 (empty -> .) ]

    expression                     shift and go to state 34
    number                         shift and go to state 3
    list                           shift and go to state 6
    empty                          shift and go to state 7

state 10

    (9) expression -> NOT . expression
    (2) expression -> . number
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . empty
    (7) expression -> . expression LBRACKET number RBRACKET
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . NOT expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression GT expression
    (13) expression -> . expression GTE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LTE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NEQUAL expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression MULT expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression FDIVIDE expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression IN expression
    (26) expression -> . MINUS expression
    (31) number -> . INT
    (32) number -> . REAL
    (27) list -> . LBRACKET RBRACKET
    (28) list -> . LBRACKET innerlist RBRACKET
    (33) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    LPAREN          shift and go to state 9
    NOT             shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 12
    REAL            shift and go to state 13
    LBRACKET        shift and go to state 8
    AND             reduce using rule 33 (empty -> .)
    OR              reduce using rule 33 (empty -> .)
    GT              reduce using rule 33 (empty -> .)
    GTE             reduce using rule 33 (empty -> .)
    LT              reduce using rule 33 (empty -> .)
    LTE             reduce using rule 33 (empty -> .)
    EQUAL           reduce using rule 33 (empty -> .)
    NEQUAL          reduce using rule 33 (empty -> .)
    ADD             reduce using rule 33 (empty -> .)
    MULT            reduce using rule 33 (empty -> .)
    DIVIDE          reduce using rule 33 (empty -> .)
    FDIVIDE         reduce using rule 33 (empty -> .)
    POW             reduce using rule 33 (empty -> .)
    MOD             reduce using rule 33 (empty -> .)
    IN              reduce using rule 33 (empty -> .)
    $end            reduce using rule 33 (empty -> .)
    RBRACKET        reduce using rule 33 (empty -> .)
    COMMA           reduce using rule 33 (empty -> .)
    RPAREN          reduce using rule 33 (empty -> .)

  ! LBRACKET        [ reduce using rule 33 (empty -> .) ]
  ! MINUS           [ reduce using rule 33 (empty -> .) ]

    expression                     shift and go to state 35
    number                         shift and go to state 3
    list                           shift and go to state 6
    empty                          shift and go to state 7

state 11

    (26) expression -> MINUS . expression
    (2) expression -> . number
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . empty
    (7) expression -> . expression LBRACKET number RBRACKET
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . NOT expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression GT expression
    (13) expression -> . expression GTE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LTE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NEQUAL expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression MULT expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression FDIVIDE expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression IN expression
    (26) expression -> . MINUS expression
    (31) number -> . INT
    (32) number -> . REAL
    (27) list -> . LBRACKET RBRACKET
    (28) list -> . LBRACKET innerlist RBRACKET
    (33) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    LPAREN          shift and go to state 9
    NOT             shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 12
    REAL            shift and go to state 13
    LBRACKET        shift and go to state 8
    AND             reduce using rule 33 (empty -> .)
    OR              reduce using rule 33 (empty -> .)
    GT              reduce using rule 33 (empty -> .)
    GTE             reduce using rule 33 (empty -> .)
    LT              reduce using rule 33 (empty -> .)
    LTE             reduce using rule 33 (empty -> .)
    EQUAL           reduce using rule 33 (empty -> .)
    NEQUAL          reduce using rule 33 (empty -> .)
    ADD             reduce using rule 33 (empty -> .)
    MULT            reduce using rule 33 (empty -> .)
    DIVIDE          reduce using rule 33 (empty -> .)
    FDIVIDE         reduce using rule 33 (empty -> .)
    POW             reduce using rule 33 (empty -> .)
    MOD             reduce using rule 33 (empty -> .)
    IN              reduce using rule 33 (empty -> .)
    $end            reduce using rule 33 (empty -> .)
    RBRACKET        reduce using rule 33 (empty -> .)
    COMMA           reduce using rule 33 (empty -> .)
    RPAREN          reduce using rule 33 (empty -> .)

  ! LBRACKET        [ reduce using rule 33 (empty -> .) ]
  ! MINUS           [ reduce using rule 33 (empty -> .) ]

    expression                     shift and go to state 36
    number                         shift and go to state 3
    list                           shift and go to state 6
    empty                          shift and go to state 7

state 12

    (31) number -> INT .

    LBRACKET        reduce using rule 31 (number -> INT .)
    AND             reduce using rule 31 (number -> INT .)
    OR              reduce using rule 31 (number -> INT .)
    GT              reduce using rule 31 (number -> INT .)
    GTE             reduce using rule 31 (number -> INT .)
    LT              reduce using rule 31 (number -> INT .)
    LTE             reduce using rule 31 (number -> INT .)
    EQUAL           reduce using rule 31 (number -> INT .)
    NEQUAL          reduce using rule 31 (number -> INT .)
    ADD             reduce using rule 31 (number -> INT .)
    MINUS           reduce using rule 31 (number -> INT .)
    MULT            reduce using rule 31 (number -> INT .)
    DIVIDE          reduce using rule 31 (number -> INT .)
    FDIVIDE         reduce using rule 31 (number -> INT .)
    POW             reduce using rule 31 (number -> INT .)
    MOD             reduce using rule 31 (number -> INT .)
    IN              reduce using rule 31 (number -> INT .)
    $end            reduce using rule 31 (number -> INT .)
    RBRACKET        reduce using rule 31 (number -> INT .)
    COMMA           reduce using rule 31 (number -> INT .)
    RPAREN          reduce using rule 31 (number -> INT .)


state 13

    (32) number -> REAL .

    LBRACKET        reduce using rule 32 (number -> REAL .)
    AND             reduce using rule 32 (number -> REAL .)
    OR              reduce using rule 32 (number -> REAL .)
    GT              reduce using rule 32 (number -> REAL .)
    GTE             reduce using rule 32 (number -> REAL .)
    LT              reduce using rule 32 (number -> REAL .)
    LTE             reduce using rule 32 (number -> REAL .)
    EQUAL           reduce using rule 32 (number -> REAL .)
    NEQUAL          reduce using rule 32 (number -> REAL .)
    ADD             reduce using rule 32 (number -> REAL .)
    MINUS           reduce using rule 32 (number -> REAL .)
    MULT            reduce using rule 32 (number -> REAL .)
    DIVIDE          reduce using rule 32 (number -> REAL .)
    FDIVIDE         reduce using rule 32 (number -> REAL .)
    POW             reduce using rule 32 (number -> REAL .)
    MOD             reduce using rule 32 (number -> REAL .)
    IN              reduce using rule 32 (number -> REAL .)
    $end            reduce using rule 32 (number -> REAL .)
    RBRACKET        reduce using rule 32 (number -> REAL .)
    COMMA           reduce using rule 32 (number -> REAL .)
    RPAREN          reduce using rule 32 (number -> REAL .)


state 14

    (7) expression -> expression LBRACKET . number RBRACKET
    (31) number -> . INT
    (32) number -> . REAL

    INT             shift and go to state 12
    REAL            shift and go to state 13

    number                         shift and go to state 37

state 15

    (10) expression -> expression AND . expression
    (2) expression -> . number
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . empty
    (7) expression -> . expression LBRACKET number RBRACKET
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . NOT expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression GT expression
    (13) expression -> . expression GTE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LTE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NEQUAL expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression MULT expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression FDIVIDE expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression IN expression
    (26) expression -> . MINUS expression
    (31) number -> . INT
    (32) number -> . REAL
    (27) list -> . LBRACKET RBRACKET
    (28) list -> . LBRACKET innerlist RBRACKET
    (33) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    LPAREN          shift and go to state 9
    NOT             shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 12
    REAL            shift and go to state 13
    LBRACKET        shift and go to state 8
    AND             reduce using rule 33 (empty -> .)
    OR              reduce using rule 33 (empty -> .)
    GT              reduce using rule 33 (empty -> .)
    GTE             reduce using rule 33 (empty -> .)
    LT              reduce using rule 33 (empty -> .)
    LTE             reduce using rule 33 (empty -> .)
    EQUAL           reduce using rule 33 (empty -> .)
    NEQUAL          reduce using rule 33 (empty -> .)
    ADD             reduce using rule 33 (empty -> .)
    MULT            reduce using rule 33 (empty -> .)
    DIVIDE          reduce using rule 33 (empty -> .)
    FDIVIDE         reduce using rule 33 (empty -> .)
    POW             reduce using rule 33 (empty -> .)
    MOD             reduce using rule 33 (empty -> .)
    IN              reduce using rule 33 (empty -> .)
    $end            reduce using rule 33 (empty -> .)
    RBRACKET        reduce using rule 33 (empty -> .)
    COMMA           reduce using rule 33 (empty -> .)
    RPAREN          reduce using rule 33 (empty -> .)

  ! LBRACKET        [ reduce using rule 33 (empty -> .) ]
  ! MINUS           [ reduce using rule 33 (empty -> .) ]

    expression                     shift and go to state 38
    number                         shift and go to state 3
    list                           shift and go to state 6
    empty                          shift and go to state 7

state 16

    (11) expression -> expression OR . expression
    (2) expression -> . number
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . empty
    (7) expression -> . expression LBRACKET number RBRACKET
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . NOT expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression GT expression
    (13) expression -> . expression GTE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LTE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NEQUAL expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression MULT expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression FDIVIDE expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression IN expression
    (26) expression -> . MINUS expression
    (31) number -> . INT
    (32) number -> . REAL
    (27) list -> . LBRACKET RBRACKET
    (28) list -> . LBRACKET innerlist RBRACKET
    (33) empty -> .

  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    BOOLEAN         shift and go to state 4
    STRING          shift and go to state 5
    LPAREN          shift and go to state 9
    NOT             shift and go to state 10
    MINUS           shift and go to state 11
    INT             shift and go to state 12
    REAL            shift and go to state 13
    LBRACKET        shift and go to state 8
    AND             reduce using rule 33 (empty -> .)
    OR              reduce using rule 33 (empty -> .)
    GT              reduce using rule 33 (empty -> .)
    GTE             reduce using rule 33 (empty -> .)
    LT              reduce using rule 33 (empty -> .)
    LTE             reduce using rule 33 (empty -> .)
    EQUAL           reduce using rule 33 (empty -> .)
    NEQUAL          reduce using rule 33 (empty -> .)
    ADD             reduce using rule 33 (empty -> .)
    MULT            reduce using rule 33 (empty -> .)
    DIVIDE          reduce using rule 33 (empty -> .)
    FDIVIDE         reduce using rule 33 (empty -> .)
    POW             reduce using rule 33 (empty -> .)
    MOD             reduce using rule 33 (empty -> .)
    IN              reduce using rule 33 (empty -> .)
    $end            reduce using rule 33 (empty -> .)
    RBRACKET        reduce using rule 33 (empty -> .)
    COMMA           reduce using rule 33 (empty -> .)
    RPAREN          reduce using rule 33 (empty -> .)

  ! LBRACKET        [ reduce using rule 33 (empty -> .) ]
  ! MINUS           [ reduce using rule 33 (empty -> .) ]

    expression                     shift and go to state 39
    number                         shift and go to state 3
    list                           shift and go to state 6
    empty                          shift and go to state 7

state 17

    (12) expression -> expression GT . expression
    (2) expression -> . number
    (3) expression -> . BOOLEAN
    (4) expression -> . STRING
    (5) expression -> . list
    (6) expression -> . empty
    (7) expression -> . expression LBRACKET number RBRACKET
    (8) expression -> . LPAREN expression RPAREN
    (9) expression -> . NOT expression
    (10) expression -> . expression AND expression
    (11) expression -> . expression OR expression
    (12) expression -> . expression GT expression
    (13) expression -> . expression GTE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LTE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NEQUAL expression
    (18) expression -> . expression ADD expression
    (19) expression -> . expression MINUS expression
    (20) expression -> . expression MULT expression
    (21) expression -> . expression DIVIDE expression
    (22) expression -> . expression FDIVIDE expression
    (23) expression -> . expression POW expression
    (24) expression -> . expression MOD expression
    (25) expression -> . expression IN expression
    (26) expression -> . MINUS expression
    (31) number -> . INT
    (32) number -> . REAL
    (27) list -> . LBRACKET RBRACKET
    (28) list -> . LBRACKET innerlist RBRACKET
    (33) empty -> .
